--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,20 +1,14 @@
 name: HelloWorld
-on:
-   push:
-       branches:
-           -main
-
-   pull_request:        
-       branches:
-          -main
-
+"on":
+  push:
+    branches: "-main"
+  pull_request:
+    branches: "-main"
 jobs:
   Hello:
-       runs-on: ubuntu-latest
-       steps:
-         -uses: actions/checkout@v2
-
-         -name: Hello World
-          run: echo "Hello World"
-          shell: bash
-
+    runs-on: ubuntu-latest
+    steps:
+      "-uses": actions/checkout@v2
+      "-name": Hello World
+      run: echo "Hello World"
+      shell: bash
