--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,15 +1,19 @@
 ---
 name: HelloWorld
+
 on:
   push:
-    branches: -main
+    branches:
+      - main
   pull_request:
-    branches: -main
+    branches:
+      - main
+
 jobs:
   Hello:
     runs-on: ubuntu-latest
     steps:
-      -uses: actions/checkout@v2
-      -name: Hello World
-      run: echo "Hello World"
-      shell: bash
+      - uses: actions/checkout@v2
+      - name: Hello World
+        run: echo "Hello World"
+        shell: bash
