--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -14,4 +14,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run Hello World
-        run: node Hello.js
+        run:  echo "Hello World"
+        shell: bash
